--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
 <body>
     <div class="video-player">
         <video src="Bassus.mp4" class="video"></video>
+
         <div class="player-controls">
             <button class="play-button" title="Play">▶️</button>
+        </div>
+
+        <input type="range" class="volume" min="0" max="1" step="0.01" value='1'>
+
+        <div class="time">
+            <span class="current">0:00 </span>
+            /
+            <span class="duration">0:00 </span>
         </div>
     </div>
     <script src="video.js"></script>
