--- a/index.html
+++ b/index.html
@@ -23,16 +23,28 @@
     <div class="video-player">
         <video src="Bassus.mp4" class="video"></video>
 
+
         <div class="player-controls">
+            <!-- the progress bar -->
+            <div class="video-progress">
+                <div class="video-progress-filled">
+
+                </div>
+
+            </div>
+            <!-- the play button -->
             <button class="play-button" title="Play">▶️</button>
-        </div>
 
-        <input type="range" class="volume" min="0" max="1" step="0.01" value='1'>
+            <!-- volume bar -->
+            <input type="range" class="volume" min="0" max="1" step="0.01" value='1'>
 
-        <div class="time">
-            <span class="current">0:00 </span>
-            /
-            <span class="duration">0:00 </span>
+            <!-- time span indicator -->
+            <div class="time">
+                <span class="current">0:00 </span>
+                /
+                <span class="duration">0:00 </span>
+            </div>
+
         </div>
     </div>
     <script src="video.js"></script>
