three parts can play independently

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
               </div>
 
               <!-- the play button -->
-              <button class="play-button" title="Play">▶️</button>
+              <button class="play-button play-button--1" title="Play">
+                ▶️
+              </button>
 
               <!-- volume bar -->
               <input
@@ -105,7 +107,9 @@
               </div>
 
               <!-- the play button -->
-              <button class="play-button" title="Play">▶️</button>
+              <button class="play-button play-button--2" title="Play">
+                ▶️
+              </button>
 
               <!-- volume bar -->
               <input
@@ -155,7 +159,9 @@
               </div>
 
               <!-- the play button -->
-              <button class="play-button" title="Play">▶️</button>
+              <button class="play-button play-button--3" title="Play">
+                ▶️
+              </button>
 
               <!-- volume bar -->
               <input
